--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.26",
     "@mui/material": "^5.15.7",
+    "@mui/x-charts": "^6.19.4",
+    "apexcharts": "^3.46.0",
+    "chart.js": "^4.4.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18"
