--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.26",
-    "@mui/material": "^5.15.7",
+    "@mui/material": "^5.15.10",
     "@mui/x-charts": "^6.19.4",
     "apexcharts": "^3.46.0",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
