--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
