--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.26",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.14",
     "@mui/x-charts": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.7",
     "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
