--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@mui/joy": "^5.0.0-beta.26",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^6.19.4",
-    "@mui/x-date-pickers": "^6.19.7",
+    "@mui/x-date-pickers": "^6.19.8",
     "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "next": "^14.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.22.1",
